recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:18: error: not enough arguments for method subTree: (steps: Int, length: Double, angle: Double, shrink: Double, gAuche: Boolean)Unit.
Unspecified value parameter gAuche.
    subTree(steps-1, length*shrink, angle, shrink); //faire le sous arbre
           ^